# r1-models

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: AddUninstallTarget.cmake
tests/: CMakeLists.txt  r1-model-test.cpp
urdf/: CMakeLists.txt  fixed_model.sdf.in  model.config.in  rgbd_camera.ini
urdf/R1Mk3/conf/: gazebo_cer_head.ini  gazebo_cer_laser_sensor.ini  gazebo_cer_laser_sensor_back.ini  gazebo_cer_laser_sensor_front.ini  gazebo_cer_lasersensor_back.ini  gazebo_cer_lasersensor_front.ini  gazebo_cer_left_arm.ini  gazebo_cer_left_hand_mk5_1.ini  gazebo_cer_mobile_base.ini  gazebo_cer_rgb_camera.ini  gazebo_cer_right_arm.ini  gazebo_cer_right_hand_mk5_1.ini  gazebo_cer_torso.ini  gz_sim_cer_mobile_base.ini  gz_sim_cer_right_hand_mk5_1.ini  gz_sim_cer_robotname.ini  gz_sim_cer_torso.ini  r1mk3.xml  r1mk3_gazebo.xml  r1mk3_gz_sim.xml  r1mk3_ros2.xml  yarpmotorgui.ini
urdf/R1Mk3/conf/FT/: gazebo_cer_left_arm_ft.ini  gazebo_cer_right_arm_ft.ini
urdf/R1Mk3/conf/gazebo_cer_odometry/: gazebo_cer_odometry.xml  gazebo_cer_odometry_nws_yarp.xml
urdf/R1Mk3/conf/sensors/: gazebo_cer_rgbd_camera.ini  rgbd_camera_wrapper.xml
urdf/R1Mk3/meshes/simmechanics/: sim_cer_emorph_head.stl  sim_cer_emorph_neck.stl  sim_emorph_chest.stl  sim_emorph_l_forearm.stl  sim_emorph_l_hand_index_1.stl  sim_emorph_l_hand_index_2.stl  sim_emorph_l_hand_index_3.stl  sim_emorph_l_hand_middle_1.stl  sim_emorph_l_hand_middle_2.stl  sim_emorph_l_hand_palm.stl  sim_emorph_l_hand_pinkie_1.stl  sim_emorph_l_hand_pinkie_2.stl  sim_emorph_l_hand_ring_1.stl  (+36 more)
(+33 files in other folders)
